--- a/Facebook/test-output/old/Default suite/classes.html
+++ b/Facebook/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.facebook.tests.LogInTest</td>
+<td>com.facebook.tests.Sample</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>doLogInTest</td>
+<td>checking</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -24,7 +24,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toCaptureScreenShot</td>
+<td>screenShot</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
