--- a/Facebook/test-output/old/Default suite/methods.html
+++ b/Facebook/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fd62e5">  <td>20/08/14 22:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInTest.doLogInTest()[pri:0, instance:com.facebook.tests.LogInTest@7494e528]">doLogInTest</td> 
+<tr bgcolor="fd62e5">  <td>20/08/15 12:08:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample.checking()[pri:0, instance:com.facebook.tests.Sample@7494e528]">checking</td> 
   <td>main@1805013491</td>   <td></td> </tr>
-<tr bgcolor="fd62e5">  <td>20/08/14 22:36:14</td>   <td>19350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LogInTest.toCaptureScreenShot(org.testng.ITestResult)[pri:0, instance:com.facebook.tests.LogInTest@7494e528]">&lt;&lt;toCaptureScreenShot</td> 
+<tr bgcolor="fd62e5">  <td>20/08/15 12:08:51</td>   <td>9192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Sample.screenShot(org.testng.ITestResult)[pri:0, instance:com.facebook.tests.Sample@7494e528]">&lt;&lt;screenShot</td> 
 <td>&nbsp;</td>  <td>main@1805013491</td>   <td></td> </tr>
 </table>
