--- a/NVSP/test-output/old/Default suite/methods-alphabetical.html
+++ b/NVSP/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c6fbb">  <td>20/12/03 22:30:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLoginTest()[pri:0, instance:nvsp.test.LoginTest@396f6598]">doLoginTest</td> 
-  <td>main@924477420</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/12/05 12:11:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLoginTest()[pri:0, instance:nvsp.test.LoginTest@76f2b07d]">doLoginTest</td> 
+  <td>main@767010715</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/12/05 12:12:27</td>   <td>35676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.takeScreenShotOnFailure(org.testng.ITestResult)[pri:0, instance:nvsp.test.LoginTest@76f2b07d]">&lt;&lt;takeScreenShotOnFailure</td> 
+<td>&nbsp;</td>  <td>main@767010715</td>   <td></td> </tr>
 </table>
